# Elsevier_paper_extractor

./: .env.example  .gitignore  README.md  pyproject.toml
notebooks/: notebook.ipynb
src/elsevier_paper_extractor/: __init__.py  cli.py  client.py
